--- a/vuejs/vars/main.yml
+++ b/vuejs/vars/main.yml
@@ -1,32 +1,22 @@
 ---
-# vars file for vuejs
-# project_directory_name: 
-#   - repository: https://github.com/Autinele/eventpass.git
-#     branch_work: main
-#     ports: 8395
-#     db_image: mysql:8.0.28-oracle
-#     db_port: 3306
-#     db_password: TqtUKdgNhjZQJKz
-#     db_user: admin_user
-#     db_volume: mysql-data
-#     db_database: admin_db
-#     db_root_password: TqtUKdgNhjZQJKz
-#     db_container: db_eventpass
-    
-# project_name: Autinele
-# clone_directory: eventpass
-
-
-# public_host: localhost
-# network_name: recrutement
 project_directory_name: 
-  - repository: https://github.com/merveille-agbakou/FRONTEND_VUE_TEST_WAOUHM.git
-    branch_work: main
+  - repository: git@gitlab.com:waouhmonde/frontend-flashcar-pack.git
+    branch_work: master
     ports: 8396
 
-project_name: merveille_agbakou
-clone_directory: FRONTEND_VUE_TEST_WAOUHM
+server_blocks:
+  - server_name: flashcar-parck.waouhmonde.com
+    port: 8396
+    email: david.seidou@waouhmonde.com
+    
+project_name: FLASHCAR-APP
+clone_directory: frontend-flashcar-pack
+username: waouhmonde_dav97
+runner: frontend-flashcar-pack
+service_name: frontend_vue
 
 
 public_host: 141.94.206.142
-network_name: recrutement
+private_key: /home/debian/.ssh/id_rsa
+network_name: flashcar
+
