--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,4 +3,4 @@ host_key_checking = False
 accelerate_multi_key = yes
 inventory=./inventory
 retry_files_enabled = False
-remote_user=seidou  
+remote_user=debian 
