--- a/playbook.yml
+++ b/playbook.yml
@@ -1,9 +1,9 @@
 ---
-# - name: Installation et configuration projet Laravel
-#   hosts:  preprod
-#   become: true
-#   roles:
-#     - laravel
+- name: Installation et configuration projet Laravel
+  hosts:  preprod
+  become: true
+  roles:
+    - laravel
 
 # - name: Installation et configuration projet Adonisjs
 #   hosts:  preprod
@@ -11,8 +11,14 @@
 #   roles:
 #     - adonisjs
 
-- name: Installation et configuration projet Vuejs
-  hosts:  preprod
-  become: true
-  roles:
-    - vuejs
+# - name: Installation et configuration projet Vuejs
+#   hosts:  preprod
+#   become: true
+#   roles:
+#     - vuejs
+
+# - name: tasks file for empty-csaf-job
+#   hosts:  preprod
+#   become: true
+#   roles:
+#     - empty-csaf-job
