--- a/laravel/tasks/main.yml
+++ b/laravel/tasks/main.yml
@@ -1,155 +1,154 @@
 ---
 # tasks file for laravel
 
-# Create Project folder
-- name: Creates Project directory
-  ansible.builtin.file:
-    path: /home/{{ ansible_user }}/{{ project_name }}
-    state: directory
+# # Create Project folder
+# - name: Creates Project directory
+#   ansible.builtin.file:
+#     path: /home/{{ ansible_user }}/{{ project_name }}
+#     state: directory
 
 
 
-# Clone repository
-- name: Clone the repository
-  git:
-    repo: "{{ item.repository }}"
-    dest: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}
-    version: "{{ item.branch_work }}"
-    update: yes
-    force: yes
-  loop: "{{ project_directory_name }}"
+# # Clone repository
+# - name: Clone the repository
+#   git:
+#     repo: "{{ item.repository }}"
+#     dest: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}
+#     version: "{{ item.branch_work }}"
+#     update: yes
+#     force: yes
+#     key_file: "{{ private_key }}"
+#     accept_hostkey: yes
+#   loop: "{{ project_directory_name }}"
+#   register: git_clone_result
 
-  register: git_clone_result
-
-- name: Display clone result
-  debug:
-    var: git_clone_result
+# - name: Display clone result
+#   debug:
+#     var: git_clone_result
 
   
-# Docker Network
-- name: Check if network exist
-  command: docker network inspect {{ network_name }} 
-  register: result
-  ignore_errors: True
+# # Docker Network
+# - name: Check if network exist
+#   command: docker network inspect {{ network_name }} 
+#   register: result
+#   ignore_errors: True
 
 
 
-- name: Create Docker network
-  command: docker network create {{ network_name }} 
-  when: result is failed
+# - name: Create Docker network
+#   command: docker network create {{ network_name }} 
+#   when: result is failed
 
-- name: Creates docker entrypoint folder
-  ansible.builtin.file:
-    path: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/docker
-    state: directory
+# - name: Creates docker entrypoint folder
+#   ansible.builtin.file:
+#     path: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/docker
+#     state: directory
 
-- name: Copy entrypoint file into docker folder
-  template:
-    src: entrypoint.sh
-    dest: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/docker/entrypoint.sh
-    mode: '0755'
+# - name: Copy entrypoint file into docker folder
+#   template:
+#     src: entrypoint.sh
+#     dest: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/docker/entrypoint.sh
+#     mode: '0755'
 
-# Custome docker compose and env
-- name: copy Dockerfile
-  template:
-    src: Dockerfile
-    dest: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/Dockerfile
-
-
-- name: copy env
-  template:
-    src: env 
-    dest: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/env
-  loop: "{{ project_directory_name }}"
+# # Custome docker compose and env
+# - name: copy Dockerfile
+#   template:
+#     src: Dockerfile
+#     dest: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/Dockerfile
 
 
-- name: Set lowercase project name
-  set_fact:
-    docker_image_name: "{{ clone_directory | lower }}:api"
+# - name: copy env
+#   template:
+#     src: env 
+#     dest: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/env
+#   loop: "{{ project_directory_name }}"
 
-- name: Check if image already exist
-  command: docker image inspect {{ docker_image_name }} 
-  register: result_image
-  ignore_errors: True
+
+# - name: Set lowercase project name
+#   set_fact:
+#     docker_image_name: "{{ clone_directory | lower }}:api"
+
+# - name: Check if image already exist
+#   command: docker image inspect {{ docker_image_name }} 
+#   register: result_image
+#   ignore_errors: True
 
  
-# build the app
-- name: Build Docker image
-  command:  docker build -t {{ docker_image_name }} /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }} 
-  args:
-    chdir: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }} 
-  when: result_image is failed
-  register: output
+# # build the app
+# - name: Build Docker image
+#   command:  docker build -t {{ docker_image_name }} /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }} 
+#   args:
+#     chdir: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }} 
+#   when: result_image is failed
+#   register: output
 
-- name: view image 
-  debug:
-    var: output
+# - name: view image 
+#   debug:
+#     var: output
   
-- name: Update file docker compose
-  template:
-    src:  docker-compose.yml
-    dest: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/docker-compose.yml
-  mode: '0755'
-  loop: "{{ project_directory_name }}"
+# - name: Update file docker compose
+#   template:
+#     src:  docker-compose.yml
+#     dest: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/docker-compose.yml
+#     mode: '0755'
+#   loop: "{{ project_directory_name }}"
 
-# Up application
-#- name: Start Docker Compose application
- # command: docker compose -f /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/docker-compose.yml  up -d
-  #args:
-   # chdir: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}
+# # Up application
+# - name: Start Docker Compose application
+#   command: docker compose -f /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}/docker-compose.yml  up -d
+#   args:
+#     chdir: /home/{{ ansible_user }}/{{ project_name }}/{{ clone_directory }}
 
 
 # ##### Reverse proxy
-- name: Configure Nginx server block 
-  template:
-    src:  nginx.conf
-    dest: /etc/nginx/sites-available/{{ item.server_name }}
-  loop: "{{ server_blocks }}"
+# - name: Configure Nginx server block 
+#   template:
+#     src:  nginx.conf
+#     dest: /etc/nginx/sites-available/{{ item.server_name }}
+#   loop: "{{ server_blocks }}"
 
-- name: Enable the server block 
-  file:
-    src: /etc/nginx/sites-available/{{ item.server_name }}
-    dest: /etc/nginx/sites-enabled/{{ item.server_name }}
-    state: link
-  loop: "{{ server_blocks }}"
+# - name: Enable the server block 
+#   file:
+#     src: /etc/nginx/sites-available/{{ item.server_name }}
+#     dest: /etc/nginx/sites-enabled/{{ item.server_name }}
+#     state: link
+#   loop: "{{ server_blocks }}"
 
+# - name: Test Nginx configuration
+#   command: nginx -t
+#   register: nginx_test
 
-- name: Test Nginx configuration
-  command: nginx -t
-  register: nginx_test
+# - name: Display Nginx test output
+#   debug:
+#     var: nginx_test.stdout
 
-- name: Display Nginx test output
-  debug:
-    var: nginx_test.stdout
+# - name: Reload Nginx
+#   service:
+#     name: nginx
+#     state: reloaded
 
-- name: Reload Nginx
-  service:
-    name: nginx
-    state: reloaded
+# - name: Obtain SSL certificates and configure Nginx
+#   command: >
+#     certbot --nginx
+#     --non-interactive
+#     --agree-tos
+#     --email {{ item.email }}
+#     -d {{ item.server_name }}
+#   loop: "{{ server_blocks }}"
 
+# - name: Test Nginx configuration after SSL setup
+#   command: nginx -t
+#   register: nginx_ssl_test
 
-- name: Obtain SSL certificates and configure Nginx
-  command: >
-    certbot --nginx
-    --non-interactive
-    --agree-tos
-    --email {{ item.email }}
-    -d {{ item.server_name }}
-  loop: "{{ server_blocks }}"
+# - name: Display Nginx SSL test output
+#   debug:
+#     var: nginx_ssl_test.stdout{{ item.port }}
+#   loop: "{{ server_blocks }}"
 
-- name: Test Nginx configuration after SSL setup
-  command: nginx -t
-  register: nginx_ssl_test
-
-- name: Display Nginx SSL test output
-  debug:
-    var: nginx_ssl_test.stdout{{ item.port }}
-  loop: "{{ server_blocks }}"
-
-- name: Reload Nginx to apply SSL configuration
-  service:
-    name: nginx
-    state: reloaded 
+# - name: Reload Nginx to apply SSL configuration
+#   service:
+#     name: nginx
+#     state: reloaded 
 
 #### Gitlab runner
 - name: Copy .gitlab-ci.yml
