--- a/laravel/templates/.gitlab-ci.yml
+++ b/laravel/templates/.gitlab-ci.yml
@@ -7,7 +7,6 @@ sast:
   stage: test
 
 
-
 variables:
   OLD_IMAGE: "image: {{ clone_directory | lower }}:api"
   UPDATED_IMAGE: $CI_REGISTRY_IMAGE:${CI_COMMIT_SHA//[^a-zA-Z0-9_.-]/}
@@ -25,11 +24,10 @@ build:
     - docker:19.03.1-dind
   before_script:
     - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
-    - echo  $UPDATED_IMAGE
   script:
-    - echo  $UPDATED_IMAGE && docker build -t UPDATED_IMAGE .
-    - docker tag $UPDATED_IMAGE {{ clone_directory | lower }}:api
-    - docker push $UPDATED_IMAGE
+    - docker build -t $CI_REGISTRY_IMAGE .
+    - docker tag $CI_REGISTRY_IMAGE {{ clone_directory | lower }}:api
+    - docker push $CI_REGISTRY_IMAGE
   when: on_success
   tags:
     - "{{ runner }}"
