--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@ galaxy_info:
   role_name: deploy_js_app
   author: SEIDOU DAVID
   description: Template to deploy JS app from source code to dns and reverse proxy configuration. Include ssl letsencrypt resolution 
-  company: CloudENV
+  company: CloudEnv
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
