Fix issue: msg: python3-apt must be installed to use check mode. If run normally this module can auto-install it.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -50,6 +50,7 @@ galaxy_info:
 
 
 dependencies:
+  - role: geerlingguy.pip
   - role: geerlingguy.docker
   - role: geerlingguy.nginx
   - role: geerlingguy.certbot
