--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -5,7 +5,8 @@ server {
     access_log /var/log/nginx/{{ item.server_name }}.access.log;
     error_log /var/log/nginx/{{ item.server_name }}.error.log;
 
-
+    # Security headers for better security only for app that have var deployment_type: application 
+{% if deployment_type == 'application' %}
     add_header Content-Security-Policy "frame-ancestors 'self' '{{ item.server_name }}' ;" always;
     add_header X-Frame-Options "ALLOW-FROM '{{ item.server_name }}' " always;
     add_header X-Content-Type-Options "nosniff";
@@ -13,6 +14,7 @@ server {
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=(), payment=()";
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
     client_max_body_size 100M;
+{% endif %}
 
     location / {
         proxy_pass http://localhost:{{ item.port }}/;
